# log-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
log_mcp/: __init__.py  server.py
