[project]
name = "log-inspector-mcp"
version = "0.4.4"
description = "MCP server for inspecting log files in XDG_RUNTIME_DIR/log"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Thomas Hartwig", email = "thomas.hartwig@gmail.com"}
]
dependencies = [
    "mcp>=1.0.0",
]
requires-python = ">=3.10"

[project.scripts]
log-mcp = "log_mcp.server:run"

[project.urls]
Homepage = "https://github.com/thhart/log-mcp"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["log_mcp*"]
